--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>3.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.91.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
