--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,37 +2,24 @@ server:
   port: 9000
 spring:
   application:
-    name: management-center
+    name: GDM-center
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/management?serverTimezone=Asia/Shanghai&useSSL=false&useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://1.12.228.45:3315/gdm-center?serverTimezone=Asia/Shanghai&useSSL=false&useUnicode=true&characterEncoding=UTF-8
     username: root
     password: root
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+    servlet:
+      path: /api
   session:
     timeout: "P30D" #30天
   messages: #国际化配置
     encoding: UTF-8
     basename: i18n/message
 
-mybatis-plus:
-  global-config:
-    db-config:
-      logic-delete-field: flag # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
-      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
-      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
-#  configuration:
-#    map-underscore-to-camel-case: false
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
-
-#netty的配置信息(端口号,webSocket路径)
-webSocket:
-  netty:
-    port: 9999
-    path: /webSocket
-    readerIdleTime: 30 #读空闲超时时间设置(Netty心跳检测配置)
-    writerIdleTime: 30 #写空闲超时时间设置(Netty心跳检测配置)
-    allIdleTime: 30 #读写空闲超时时间设置(Netty心跳检测配置)
+mybatis:
+  mapper-locations: classpath*:mapper/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
