--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,8 +13,8 @@ spring:
       matching-strategy: ANT_PATH_MATCHER
     servlet:
       path: /api
-  session:
-    timeout: "P30D" #30天
+#  session:
+#    timeout: "P30D" #30天
   messages: #国际化配置
     encoding: UTF-8
     basename: i18n/message
